Typewriter effect and z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,12 @@
 
 .text-block {
   height: 100%;
+  min-width: 600px;
   max-width: 600px;
+  padding: 0;
   padding-left: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   position: relative;
 
   border-top: 0;
@@ -66,6 +66,9 @@
 }
 
 .projects {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
   margin: 0;
   padding: 0;
   border-right: 0;
@@ -82,10 +85,11 @@
   position: relative;
   top: 0;
   right: 0;
+  transform-style: preserve-3d;
 }
 
 .project-link {
-  padding: 10px 10px 0px 10px;
+  padding: 10px;
   border-bottom-style: solid;
   border-bottom-width: 1px;
 }
@@ -101,8 +105,18 @@ pre {
   font-size: 0.55em;
   white-space: pre-wrap;
   text-align: left;
+  margin: 0;
   margin-left: 10px;
-  padding: 0;
+}
+
+.name {
+  font-size: 1em;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.projects-header {
+  font-size: 1em;
 }
 
 div.body:before {
@@ -111,11 +125,15 @@ div.body:before {
   left: 0;
   top: 0;
   height: 125px;
-  width: 125px;
+  width: 250px;
   
   border-width: 10px;
   border-top-style: solid;
   border-left-style: double;
+  border-bottom-style: solid;
+  border-bottom-color: transparent;
+  border-right-style: double;
+  border-right-color: transparent;
   border-radius: 5px;
 }
 
@@ -125,11 +143,15 @@ div.body:after {
   right: 0;
   bottom: 0;
   height: 125px;
-  width: 125px;
+  width: 250px;
   
   border-width: 10px;
   border-bottom-style: solid;
   border-right-style: double;
+  border-top-style: solid;
+  border-top-color: transparent;
+  border-left-style: double;
+  border-left-color: transparent;
   border-radius: 5px;
 }
 
@@ -138,7 +160,7 @@ div.text-block:before {
   position: absolute;
   left: 0;
   top: 0;
-  height: 100%;
+  bottom: 0;
   
   border-width: 10px;
   border-color: transparent;
@@ -149,16 +171,21 @@ div.text-block:before {
   border-radius: 5px;
 }
 
-div.projects:before {
+.project-links:before {
   content: "";
   position: absolute;
   left: 0;
   top: 0;
   height: 100px;
   width: 100px;
+  transform: translateZ(-1px);
   
   border-width: 10px;
   border-top-style: solid;
   border-left-style: double;
+  border-bottom-style: solid;
+  border-bottom-color: transparent;
+  border-right-style: double;
+  border-right-color: transparent;
   border-radius: 5px;
 }
